--- a/home.html
+++ b/home.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="navbar__container">
+        <a href="/" id="navbar__logo">Kaiser Aquatics</a>
+        <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+         </div>
+         <ul class="navbar__menu">
+            <li class="navbar__item">
+                <a href="/" class="navbar__links">
+                    Home
+                </a>
+            </li>
+            <li class="navbar__item">
+                <a href="/" class="navbar__links">
+                    About Us
+                </a>
+            </li>
+            <li class="navbar__item">
+                <a href="/" class="navbar__links">
+                    Contact Us
+                </a>
+            </li>
+            <li class="navbar__item">
+                <a href="/" class="navbar__links">
+                   Products
+                </a>
+            </li>
+            <li class="navbar__btn">
+                <a href="/" class="button">
+                    Log In
+                </a>
+            </li>
+         </ul>
+     </div>
+    </nav>
 </body>
 </html>
