--- a/home.html
+++ b/home.html
@@ -9,11 +9,12 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-        <a href="/" id="navbar__logo">Kaiser Aquatics</a>
+        <a href="/" id="navbar__logo"><img src="images/KALOGO.png" alt="KA logo" class="logo-img">Kaiser Aquatics</a>
         <div class="navbar__toggle" id="mobile-menu">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
+            
          </div>
          <ul class="navbar__menu">
             <li class="navbar__item">
@@ -32,13 +33,21 @@
                 </a>
             </li>
             <li class="navbar__item">
-                <a href="/" class="navbar__links">
+                <a href="/" class="navbar__links" alt="Products">
                    Products
                 </a>
             </li>
          </ul>
      </div>
     </nav>
+    <div class="main__container">
+        <div class="top__video">
+          <video autoplay muted loop class="bg-video">
+          <source src="vids/WhatsApp Video 2025-07-31 at 19.19.53.mp4" type="video/mp4">
+                Your browser does not support this video.
+          </video>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
