--- a/home.html
+++ b/home.html
@@ -47,6 +47,9 @@
                 Your browser does not support this video.
           </video>
         </div>
+        <div class="main__content">
+            <h1>Evolving with Nature</h1>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
