trying to add an animation

--- a/home.html
+++ b/home.html
@@ -48,7 +48,10 @@
           </video>
         </div>
         <div class="main__content">
-            <h1>Evolving with Nature</h1>
+            <h1 class="animated-heading">evolving with nature</h1>
+            <div class="why__us">
+
+            </div>
         </div>
     </div>
     <script src="app.js"></script>
