busy adding the rest of the pages, home page done...kinda

--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -23,17 +26,17 @@
                 </a>
             </li>
             <li class="navbar__item">
-                <a href="/" class="navbar__links">
+                <a href="about.html" class="navbar__links">
                     About Us
                 </a>
             </li>
             <li class="navbar__item">
-                <a href="/" class="navbar__links">
+                <a href="contact.html" class="navbar__links">
                     Contact Us
                 </a>
             </li>
             <li class="navbar__item">
-                <a href="/" class="navbar__links" alt="Products">
+                <a href="products.html" class="navbar__links" alt="Products">
                    Products
                 </a>
             </li>
@@ -46,14 +49,22 @@
           <source src="vids/WhatsApp Video 2025-07-31 at 19.19.53.mp4" type="video/mp4">
                 Your browser does not support this video.
           </video>
-        </div>
-        <div class="main__content">
-            <h1 class="animated-heading">evolving with nature</h1>
-            <div class="why__us">
-
-            </div>
-        </div>
+      
     </div>
+    <div class="main__content">
+            <h1 class="animated-heading">evolving with nature...</h1>
+            <br>
+            <div class="why__us">
+  <h2>Why Choose Kaiser Aquatics?</h2>
+  <p>At Kaiser Aquatics, we are passionate about quality and sustainability. As a trusted wholesale supplier of aquatic plants, we serve pet shops across South Africa with healthy, vibrant, and locally cultivated flora.
+    We provide premium-quality aquatic plants grown with care and dedication. Our clients benefit from reliable nationwide delivery, weekly restocks to keep their displays vibrant, and personalized support tailored to each pet shop’s needs. We're also committed to sustainability, offering eco-conscious and responsibly sourced products you can trust.
+  </p>
+  
+</div>
+    </div>
+    <div class="footer__bottom">
+    <p>&copy; 2025 Kaiser Aquatics. All rights reserved.</p>
+  </div>
     <script src="app.js"></script>
 </body>
 </html>
