added header and footers to the rest of the pages

--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
     <nav class="navbar">
@@ -18,12 +19,12 @@
          </div>
          <ul class="navbar__menu">
             <li class="navbar__item">
-                <a href="/" class="navbar__links">
+                <a href="home.html" class="navbar__links">
                     Home
                 </a>
             </li>
             <li class="navbar__item">
-                <a href="about.html" class="navbar__links">
+                <a href="/" class="navbar__links">
                     About Us
                 </a>
             </li>
@@ -34,11 +35,15 @@
             </li>
             <li class="navbar__item">
                 <a href="products.html" class="navbar__links" alt="Products">
-                   Products
+                   <p class="products">Products</p>
                 </a>
             </li>
          </ul>
      </div>
     </nav>
+    <div class="footer__bottom">
+    <p>&copy; 2025 Kaiser Aquatics. All rights reserved.</p>
+  </div>
+    <script src="app.js"></script>
 </body>
 </html>
