About page mostly done

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li class="navbar__item">
-                <a href="/" class="navbar__links">
+                <a href="#" class="navbar__links">
                     About Us
                 </a>
             </li>
@@ -41,6 +41,24 @@
          </ul>
      </div>
     </nav>
+     <div class="why__us">
+  <h2>About Kaiser Aquatics</h2>
+  <p>At Kaiser Aquatics, we are passionate about quality and sustainability. As a trusted wholesale supplier of aquatic plants, we serve pet shops across South Africa with healthy, vibrant, and locally cultivated flora.
+    We provide premium-quality aquatic plants grown with care and dedication. Our clients benefit from reliable nationwide delivery, weekly restocks to keep their displays vibrant, and personalized support tailored to each pet shop’s needs. We're also committed to sustainability, offering eco-conscious and responsibly sourced products you can trust.
+  </p>
+</div>
+<div class="bottom__vid">
+ <video autoplay muted loop class="bg-video">
+          <source src="vids/WhatsApp Video 2025-08-02 at 14.13.40.mp4" type="video/mp4">
+                Your browser does not support this video.
+          </video>
+</div>
+       
+      <div class="main__content">
+            <h1 class="animated-heading">evolving with nature...</h1>
+            <br>
+      </div>      
+    
     <div class="footer__bottom">
     <p>&copy; 2025 Kaiser Aquatics. All rights reserved.</p>
   </div>
