--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
          </div>
          <ul class="navbar__menu">
             <li class="navbar__item">
-                <a href="/" class="navbar__links">
+                <a href="home.html" class="navbar__links">
                     Home
                 </a>
             </li>
@@ -29,7 +29,7 @@
                 </a>
             </li>
             <li class="navbar__item">
-                <a href="contact.html" class="navbar__links">
+                <a href="#" class="navbar__links">
                     Contact Us
                 </a>
             </li>
@@ -41,6 +41,26 @@
          </ul>
      </div>
     </nav>
+    <section class="contact-form-section">
+        <h2>Contact Us</h2>
+        <form class="contact-form" action="mailto:kaiseraquatics@gmail.com" method="POST" enctype="text/plain">
+            <label for="business_name">Business Name:</label>
+            <input type="text" id="business_name" name="business_name" required>
+            
+            <label for="user_name">Your Name:</label>
+            <input type="text" id="user_name" name="user_name">
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit">Send Message</button>
+
+
+        </form>
+    </section>
     <div class="footer__bottom">
     <p>&copy; 2025 Kaiser Aquatics. All rights reserved.</p>
   </div>
